--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,12 @@ dependencies:
   bloc: ^3.0.0
   flutter_bloc: ^3.1.0
   equatable: ^1.0.2
+  shared_preferences: ^0.5.6+3
+  table_calendar: ^2.2.3
+  calendar_strip: ^1.0.4
+  timeline_list: ^0.0.3
+  mobile_number: ^0.0.4
+
 
   flutter:
     sdk: flutter
